# genai

./: .gitignore
Model/: model.py  (+6 more)
convertor/backend/: README.md  cli_test.py  debug_chain.py  debug_imports.py  fix_parser.py  main.py  media_test_output.txt  pyproject.toml  test_db.py  test_media_paths.py  test_parser.py
convertor/backend/api/: __init__.py  editor_api.py  routes.py
convertor/backend/core/: __init__.py  code_converter.py  database.py  docs_cache.py  file_watcher.py  hash_index.py  link_resolver.py  mdx_converter.py  media_resolver.py  notebook_converter.py  parser.py  rd_converter.py  rst_converter.py  scanner.py  search.py  streaming_loader.py  task_queue.py  websocket_manager.py
convertor/backend/data/: documents.db  documents.db-shm  documents.db-wal  test.db
convertor/backend/git_pipeline/: cache.py  db.py  debug_db.py  router.py  schemas.py  service.py  test_cli.py  test_openai.py
convertor/backend/models/: __init__.py
convertor/backend/terminal_service/: .env.example  Dockerfile  QUICKSTART.md  QUICKSTART_WINDOWS.md  README.md  TERMINAL_TUI.md  TESTING_GUIDE.md  __init__.py  config.py  docker-compose.yml  install_redis.ps1  main.py  requirements.txt  run.py  setup.py  start_redis.ps1
convertor/backend/terminal_service/api/: __init__.py  routes.py
convertor/backend/terminal_service/core/: __init__.py  connection_monitor.py  flow_control.py  output_buffer_manager.py  pty_manager.py  reconnection_manager.py  session_manager.py  tcp_optimizer.py  websocket_handler.py
convertor/backend/terminal_service/k8s/: deployment.yaml  redis.yaml
(+287 files in other folders)
